[package]
name = "norgopolis-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
prost = "0.11.9"
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.9.2"

[dev-dependencies]
cbindgen = "0.24.3"

[build-dependencies]
tonic-build = "0.9.2"
