[package]
name = "norgopolis-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
prost = "0.11.9"
rmp-serde = "1.1.1"
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "process", "io-std"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
