[package]
name = "norgopolis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
prost = "0.11.9"
rmp = "0.8.11"
rmp-serde = "1.1.1"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "process", "io-std"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.9.2"
