[package]
name = "hello-world-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
norgopolis-client = { version = "0.1.0", path = "../../client" }
rmp-serde = "1.1.1"
tokio = { version = "1.28.1" }
