[package]
name = "hello-world-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
norgopolis-client = "0.1.0"
norgopolis-protos = "0.1.0"
rmp-serde = "1.1.1"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.28.1" }
