[package]
name = "hello-world-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
norgopolis-module = { version = "0.1.0", path = "../../norgopolis-module" }
tokio = { version = "1.28.2" }
tokio-stream = "0.1.14"
tonic = "0.9.2"
